# protols

./: Cargo.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
crates/proto_parser/src/: lib.rs  syntax.rs
crates/proto_parser/src/syntax/: ast.rs  lexer.rs  parser.rs
crates/proto_parser/src/syntax/ast/: message.rs  option.rs  service.rs
examples/: example.proto
server/: Cargo.toml  Makefile
server/crates/proto_parser/: Cargo.toml
server/crates/proto_parser/src/: analysis.rs  lib.rs  source.rs  syntax.rs
server/crates/proto_parser/src/analysis/: completion.rs
server/crates/proto_parser/src/syntax/: ast.rs  cursor.rs  lexer.rs  parser.rs
server/crates/proto_parser/src/syntax/ast/: message.rs  option.rs  service.rs
server/examples/: example.proto  text.txt
server/protols_server/: Cargo.toml
server/protols_server/src/: backend.rs  logger.rs  main.rs
server/server/: Cargo.toml
server/server/src/: main.rs
src/: lib.rs
