[package]
name = "protols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [ "crates/*", "protols_server"]
default-members = [ "protols_server" ]

[dependencies]
proto_parser = { path = "./crates/proto_parser/"}
