[package]
name = "protols_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.3.0", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.17"
protols = { path = ".." }
simplelog = "0.12.1"
tokio = { version = "1.28.1", features = ["full"] }
tower-lsp = "0.19.0"
